--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+*.cs linguist-language=CSharp
+Assets/**/* linguist-language=CSharp
+
+*.shader linguist-generated
+*.hlsl linguist-generated
