--- a/ignore.conf
+++ b/ignore.conf
@@ -56,3 +56,11 @@ crashlytics-build.properties
 .DS_Store*
 Thumbs.db
 Desktop.ini
+
+node_modules/
+.vscode/
+coverage/
+dist/
+build/
+.cache/
+.next/
